--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyCkM2KZSzCVr9aS-Vuq_KhGDnLYR3vboEk
 REACT_APP_ADDRESS_API_KEY=yWhQFstHyU-VFiGwfMxw5g32670
+REACT_APP_CLIENT_ID=326110060194-telj65nuuhr9boqm2ru1fknvg0e73dvl.apps.googleusercontent.com
